# alfred-github

./: .gitignore  Cargo.toml  README.md  build-workflows.sh  github-search.plist  my-github-search.plist
src/: main.rs
