[package]
name = "github"
version = "0.1.0-alpha"
authors = ["Joslin, Brady W (Brady) <brady@bradyjoslin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.22"
alfred = "4.0.1"
clap = {version = "2.20.0",default-features = false}
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"